extends Button

func _on_options_mouse_entered():
	$opcoes.modulate.g= 8
	$opcoes.modulate.g = 8
	$opcoes.modulate.g = 8
	pass # Replace with function body.

func _on_options_mouse_exited():
	$opcoes.modulate.g = 1
	$opcoes.modulate.g = 1
	$opcoes.modulate.g = 1
	pass # Replace with function body.

func _on_options_pressed():
	$opcoes.modulate.g = 0.8
	$opcoes.modulate.g = 0.8
	$opcoes.modulate.g = 0.8
	pass # Replace with function body.
